--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,30 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge
-		xmlns:android="http://schemas.android.com/apk/res/android"
-		xmlns:tools="http://schemas.android.com/tools"
-		tools:showIn="@layout/activity_main">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="@layout/activity_main">
 
-	<TextView
-			style="@style/AppTheme.Description"
-			android:text="@string/random_timer_introduction"/>
+    <TextView
+        style="@style/AppTheme.Description"
+        android:text="@string/random_timer_introduction" />
 
-	<LinearLayout
-			style="@style/AppTheme.BookmarksContainer">
+    <LinearLayout style="@style/AppTheme.BookmarksContainer">
 
-		<include layout="@layout/content_bookmarks"/>
+        <include layout="@layout/content_bookmarks" />
 
-	</LinearLayout>
+    </LinearLayout>
 
-	<include layout="@layout/content_minimum_value"/>
+    <include layout="@layout/content_minimum_value" />
 
-	<include
-			layout="@layout/content_maximum_value"
-			android:layout_marginTop="@dimen/contentPadding"
-			android:layout_height="wrap_content"
-			android:layout_width="match_parent"/>
+    <include
+        layout="@layout/content_maximum_value"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/contentPadding" />
 
-	<Button
-			android:id="@+id/start"
-			style="@style/AppTheme.Button"
-			android:text="@string/start_button"/>
+    <CheckBox
+        android:id="@+id/cbAutoRepeat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/auto_repeat" />
+
+    <Button
+        android:id="@+id/btnStartTicker"
+        style="@style/AppTheme.Button"
+        android:text="@string/start_button" />
 </merge>
