--- a/app/src/main/res/drawable/klaxon_background.xml
+++ b/app/src/main/res/drawable/klaxon_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 		android:shape="rectangle">
 	<gradient
-			android:angle="270"
-			android:endColor="@color/background"
-			android:startColor="@color/primaryDarkColor" />
+		android:angle="270"
+		android:endColor="@color/background"
+		android:startColor="@color/primaryLightColor" />
 </shape>
