--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,8 @@
 	<color name="secondaryColor">#6d4c41</color>
 	<color name="secondaryLightColor">#9c786c</color>
 	<color name="secondaryDarkColor">#40241a</color>
-	<color name="primaryTextColor">#FF231816</color>
-	<color name="secondaryTextColor">#FF231816</color>
+	<color name="primaryTextColor">#FFFFFF</color>
+	<color name="secondaryTextColor">#FFFFFF</color>
 
 	<color name="background">#e0e0e0</color>
 
