--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.fanstaticapps.randomticker.ui.main.MainActivity">
+		xmlns:app="http://schemas.android.com/apk/res-auto"
+		xmlns:tools="http://schemas.android.com/tools"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		tools:context="com.fanstaticapps.randomticker.ui.main.MainActivity">
 
-    <include layout="@layout/app_bar" />
+	<include
+			android:id="@+id/appbar"
+			layout="@layout/app_bar" />
 
-    <ScrollView
-        style="@style/AppTheme.RootContainer"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+	<ScrollView
+			style="@style/AppTheme.RootContainer"
+			app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingStart="@dimen/activityPaddingHorizontal"
-            android:paddingTop="@dimen/activityPaddingVertical"
-            android:paddingEnd="@dimen/activityPaddingHorizontal"
-            android:paddingBottom="@dimen/activityPaddingVertical">
 
-            <include layout="@layout/content_main" />
-        </LinearLayout>
+		<include
+				android:id="@+id/content"
+				layout="@layout/content_main" />
 
-    </ScrollView>
+	</ScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
