--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,17 +35,17 @@
 	<style name="ShapeAppearance" />
 
 	<style name="ShapeAppearance.SmallComponent" parent="ShapeAppearance.MaterialComponents.SmallComponent">
-		<item name="cornerFamily">cut</item>
+		<item name="cornerFamily">rounded</item>
 		<item name="cornerSize">8dp</item>
 	</style>
 
 	<style name="ShapeAppearance.MediumComponent" parent="ShapeAppearance.MaterialComponents.MediumComponent">
-		<item name="cornerFamily">cut</item>
+		<item name="cornerFamily">rounded</item>
 		<item name="cornerSize">8dp</item>
 	</style>
 
 	<style name="ShapeAppearance.LargeComponent" parent="ShapeAppearance.MaterialComponents.LargeComponent">
-		<item name="cornerFamily">cut</item>
+		<item name="cornerFamily">rounded</item>
 		<item name="cornerSize">12dp</item>
 	</style>
 
