--- a/app/src/main/res/layout/activity_klaxon.xml
+++ b/app/src/main/res/layout/activity_klaxon.xml
@@ -31,7 +31,7 @@
 
 	<Button
 			android:id="@+id/tvElapsedTime"
-			style="@style/Widget.MaterialComponents.Button.TextButton"
+			style="@style/Widget.Material3.Button.TextButton"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:background="?attr/selectableItemBackground"
@@ -43,7 +43,7 @@
 
 	<Button
 			android:id="@+id/btnRepeat"
-			style="@style/Widget.MaterialComponents.Button.TextButton"
+			style="@style/Widget.Material3.Button.TextButton"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="@string/action_repeat"
