--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -4,13 +4,10 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content">
 
-	<androidx.appcompat.widget.Toolbar
+	<com.google.android.material.appbar.MaterialToolbar
 			android:id="@+id/toolbar"
-			style="@style/Widget.MaterialComponents.Toolbar.Primary"
 			android:layout_width="match_parent"
 			android:layout_height="?attr/actionBarSize"
 			app:title="@string/app_name" />
 
 </com.google.android.material.appbar.AppBarLayout>
-
-    
