--- a/app/src/main/res/layout/content_bookmarks.xml
+++ b/app/src/main/res/layout/content_bookmarks.xml
@@ -15,7 +15,7 @@
 
 	<Button
 			android:id="@+id/btnSelectBookmark"
-			style="@style/Widget.MaterialComponents.Button.TextButton"
+			style="@style/Widget.Material3.Button.TextButton"
 			android:text="@string/button_select_profile"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content" />
