--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,62 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <resources>
-
-	<color name="primaryColor">#33691e</color>
-	<color name="primaryLightColor">#629749</color>
-	<color name="primaryDarkColor">#003d00</color>
-	<color name="secondaryColor">#6d4c41</color>
-	<color name="secondaryLightColor">#9c786c</color>
-	<color name="secondaryDarkColor">#40241a</color>
-	<color name="primaryTextColor">#FFFFFF</color>
-	<color name="secondaryTextColor">#FFFFFF</color>
-
-	<color name="background">#FAFAFA</color>
-
-	<color name="cancelButtonColor">#40241a</color>
+    <color name="seed">#006A61</color>
+    <color name="md_theme_light_primary">#006A61</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#73F8E7</color>
+    <color name="md_theme_light_onPrimaryContainer">#00201D</color>
+    <color name="md_theme_light_secondary">#4A635F</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#CCE8E3</color>
+    <color name="md_theme_light_onSecondaryContainer">#05201C</color>
+    <color name="md_theme_light_tertiary">#46617A</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#CDE5FF</color>
+    <color name="md_theme_light_onTertiaryContainer">#001D32</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#FAFDFB</color>
+    <color name="md_theme_light_onBackground">#191C1B</color>
+    <color name="md_theme_light_surface">#FAFDFB</color>
+    <color name="md_theme_light_onSurface">#191C1B</color>
+    <color name="md_theme_light_surfaceVariant">#DAE5E2</color>
+    <color name="md_theme_light_onSurfaceVariant">#3F4947</color>
+    <color name="md_theme_light_outline">#6F7977</color>
+    <color name="md_theme_light_inverseOnSurface">#EFF1EF</color>
+    <color name="md_theme_light_inverseSurface">#2D3130</color>
+    <color name="md_theme_light_inversePrimary">#52DBCB</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#006A61</color>
+    <color name="md_theme_light_surfaceTintColor">#006A61</color>
+    <color name="md_theme_dark_primary">#52DBCB</color>
+    <color name="md_theme_dark_onPrimary">#003732</color>
+    <color name="md_theme_dark_primaryContainer">#005049</color>
+    <color name="md_theme_dark_onPrimaryContainer">#73F8E7</color>
+    <color name="md_theme_dark_secondary">#B1CCC7</color>
+    <color name="md_theme_dark_onSecondary">#1C3531</color>
+    <color name="md_theme_dark_secondaryContainer">#324B48</color>
+    <color name="md_theme_dark_onSecondaryContainer">#CCE8E3</color>
+    <color name="md_theme_dark_tertiary">#AECAE6</color>
+    <color name="md_theme_dark_onTertiary">#163349</color>
+    <color name="md_theme_dark_tertiaryContainer">#2E4961</color>
+    <color name="md_theme_dark_onTertiaryContainer">#CDE5FF</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#191C1B</color>
+    <color name="md_theme_dark_onBackground">#E0E3E1</color>
+    <color name="md_theme_dark_surface">#191C1B</color>
+    <color name="md_theme_dark_onSurface">#E0E3E1</color>
+    <color name="md_theme_dark_surfaceVariant">#3F4947</color>
+    <color name="md_theme_dark_onSurfaceVariant">#BEC9C6</color>
+    <color name="md_theme_dark_outline">#899390</color>
+    <color name="md_theme_dark_inverseOnSurface">#191C1B</color>
+    <color name="md_theme_dark_inverseSurface">#E0E3E1</color>
+    <color name="md_theme_dark_inversePrimary">#006A61</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#52DBCB</color>
+    <color name="md_theme_dark_surfaceTintColor">#52DBCB</color>
 </resources>
