--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-	<style name="AppTheme.Button" parent="Widget.MaterialComponents.Button">
+	<style name="AppTheme.Button" parent="Widget.Material3.Button">
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:minHeight">56dp</item>
 		<item name="android:layout_width">match_parent</item>
@@ -25,7 +25,7 @@
 		<item name="android:layout_marginBottom">@dimen/titleMargin</item>
 	</style>
 
-	<style name="CardViewStyle" parent="Widget.MaterialComponents.CardView">
+	<style name="CardViewStyle" parent="Widget.Material3.CardView.Outlined">
 		<item name="cardBackgroundColor">@color/background</item>
 		<item name="strokeColor">@color/secondaryColor</item>
 		<item name="contentPadding">8dp</item>
@@ -34,17 +34,17 @@
 
 	<style name="ShapeAppearance" />
 
-	<style name="ShapeAppearance.SmallComponent" parent="ShapeAppearance.MaterialComponents.SmallComponent">
+	<style name="ShapeAppearance.SmallComponent" parent="ShapeAppearance.Material3.SmallComponent">
 		<item name="cornerFamily">rounded</item>
 		<item name="cornerSize">8dp</item>
 	</style>
 
-	<style name="ShapeAppearance.MediumComponent" parent="ShapeAppearance.MaterialComponents.MediumComponent">
+	<style name="ShapeAppearance.MediumComponent" parent="ShapeAppearance.Material3.MediumComponent">
 		<item name="cornerFamily">rounded</item>
 		<item name="cornerSize">8dp</item>
 	</style>
 
-	<style name="ShapeAppearance.LargeComponent" parent="ShapeAppearance.MaterialComponents.LargeComponent">
+	<style name="ShapeAppearance.LargeComponent" parent="ShapeAppearance.Material3.LargeComponent">
 		<item name="cornerFamily">rounded</item>
 		<item name="cornerSize">12dp</item>
 	</style>
