tint icons correctly

--- a/app/src/main/res/drawable/klaxon_background.xml
+++ b/app/src/main/res/drawable/klaxon_background.xml
@@ -3,6 +3,6 @@
 		android:shape="rectangle">
 	<gradient
 			android:angle="270"
-			android:endColor="@color/background"
-			android:startColor="@color/primaryLightColor" />
+			android:endColor="?attr/colorSurfaceVariant"
+			android:startColor="?attr/colorSecondaryContainer" />
 </shape>
