--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -2,10 +2,12 @@
 <com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
 		android:layout_width="match_parent"
+		android:fitsSystemWindows="true"
 		android:layout_height="wrap_content">
 
 	<com.google.android.material.appbar.MaterialToolbar
 			android:id="@+id/toolbar"
+			app:titleCentered="true"
 			android:layout_width="match_parent"
 			android:layout_height="?attr/actionBarSize"
 			app:title="@string/app_name" />
