--- a/app/src/main/res/layout/content_maximum_value.xml
+++ b/app/src/main/res/layout/content_maximum_value.xml
@@ -5,6 +5,7 @@
 		android:layout_height="wrap_content">
 
 	<androidx.constraintlayout.widget.ConstraintLayout
+			android:padding="@dimen/contentPadding"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent">
 
