--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
 		xmlns:tools="http://schemas.android.com/tools"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
+		android:fitsSystemWindows="false"
 		tools:context="com.fanstaticapps.randomticker.ui.main.MainActivity">
 
 	<include
@@ -13,7 +14,6 @@
 	<ScrollView
 			style="@style/AppTheme.RootContainer"
 			app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
 
 		<include
 				android:id="@+id/content"
