--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,62 +1,61 @@
-
 <resources>
-    <color name="seed">#006A61</color>
-    <color name="md_theme_light_primary">#006A61</color>
-    <color name="md_theme_light_onPrimary">#FFFFFF</color>
-    <color name="md_theme_light_primaryContainer">#73F8E7</color>
-    <color name="md_theme_light_onPrimaryContainer">#00201D</color>
-    <color name="md_theme_light_secondary">#4A635F</color>
-    <color name="md_theme_light_onSecondary">#FFFFFF</color>
-    <color name="md_theme_light_secondaryContainer">#CCE8E3</color>
-    <color name="md_theme_light_onSecondaryContainer">#05201C</color>
-    <color name="md_theme_light_tertiary">#46617A</color>
-    <color name="md_theme_light_onTertiary">#FFFFFF</color>
-    <color name="md_theme_light_tertiaryContainer">#CDE5FF</color>
-    <color name="md_theme_light_onTertiaryContainer">#001D32</color>
-    <color name="md_theme_light_error">#BA1A1A</color>
-    <color name="md_theme_light_errorContainer">#FFDAD6</color>
-    <color name="md_theme_light_onError">#FFFFFF</color>
-    <color name="md_theme_light_onErrorContainer">#410002</color>
-    <color name="md_theme_light_background">#FAFDFB</color>
-    <color name="md_theme_light_onBackground">#191C1B</color>
-    <color name="md_theme_light_surface">#FAFDFB</color>
-    <color name="md_theme_light_onSurface">#191C1B</color>
-    <color name="md_theme_light_surfaceVariant">#DAE5E2</color>
-    <color name="md_theme_light_onSurfaceVariant">#3F4947</color>
-    <color name="md_theme_light_outline">#6F7977</color>
-    <color name="md_theme_light_inverseOnSurface">#EFF1EF</color>
-    <color name="md_theme_light_inverseSurface">#2D3130</color>
-    <color name="md_theme_light_inversePrimary">#52DBCB</color>
-    <color name="md_theme_light_shadow">#000000</color>
-    <color name="md_theme_light_surfaceTint">#006A61</color>
-    <color name="md_theme_light_surfaceTintColor">#006A61</color>
-    <color name="md_theme_dark_primary">#52DBCB</color>
-    <color name="md_theme_dark_onPrimary">#003732</color>
-    <color name="md_theme_dark_primaryContainer">#005049</color>
-    <color name="md_theme_dark_onPrimaryContainer">#73F8E7</color>
-    <color name="md_theme_dark_secondary">#B1CCC7</color>
-    <color name="md_theme_dark_onSecondary">#1C3531</color>
-    <color name="md_theme_dark_secondaryContainer">#324B48</color>
-    <color name="md_theme_dark_onSecondaryContainer">#CCE8E3</color>
-    <color name="md_theme_dark_tertiary">#AECAE6</color>
-    <color name="md_theme_dark_onTertiary">#163349</color>
-    <color name="md_theme_dark_tertiaryContainer">#2E4961</color>
-    <color name="md_theme_dark_onTertiaryContainer">#CDE5FF</color>
-    <color name="md_theme_dark_error">#FFB4AB</color>
-    <color name="md_theme_dark_errorContainer">#93000A</color>
-    <color name="md_theme_dark_onError">#690005</color>
-    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
-    <color name="md_theme_dark_background">#191C1B</color>
-    <color name="md_theme_dark_onBackground">#E0E3E1</color>
-    <color name="md_theme_dark_surface">#191C1B</color>
-    <color name="md_theme_dark_onSurface">#E0E3E1</color>
-    <color name="md_theme_dark_surfaceVariant">#3F4947</color>
-    <color name="md_theme_dark_onSurfaceVariant">#BEC9C6</color>
-    <color name="md_theme_dark_outline">#899390</color>
-    <color name="md_theme_dark_inverseOnSurface">#191C1B</color>
-    <color name="md_theme_dark_inverseSurface">#E0E3E1</color>
-    <color name="md_theme_dark_inversePrimary">#006A61</color>
-    <color name="md_theme_dark_shadow">#000000</color>
-    <color name="md_theme_dark_surfaceTint">#52DBCB</color>
-    <color name="md_theme_dark_surfaceTintColor">#52DBCB</color>
+	<color name="seed">#0277bd</color>
+	<color name="md_theme_light_primary">#00629E</color>
+	<color name="md_theme_light_onPrimary">#FFFFFF</color>
+	<color name="md_theme_light_primaryContainer">#CFE5FF</color>
+	<color name="md_theme_light_onPrimaryContainer">#001D34</color>
+	<color name="md_theme_light_secondary">#526070</color>
+	<color name="md_theme_light_onSecondary">#FFFFFF</color>
+	<color name="md_theme_light_secondaryContainer">#D5E4F7</color>
+	<color name="md_theme_light_onSecondaryContainer">#0F1D2A</color>
+	<color name="md_theme_light_tertiary">#695779</color>
+	<color name="md_theme_light_onTertiary">#FFFFFF</color>
+	<color name="md_theme_light_tertiaryContainer">#F0DBFF</color>
+	<color name="md_theme_light_onTertiaryContainer">#231532</color>
+	<color name="md_theme_light_error">#BA1A1A</color>
+	<color name="md_theme_light_errorContainer">#FFDAD6</color>
+	<color name="md_theme_light_onError">#FFFFFF</color>
+	<color name="md_theme_light_onErrorContainer">#410002</color>
+	<color name="md_theme_light_background">#FCFCFF</color>
+	<color name="md_theme_light_onBackground">#1A1C1E</color>
+	<color name="md_theme_light_surface">#FCFCFF</color>
+	<color name="md_theme_light_onSurface">#1A1C1E</color>
+	<color name="md_theme_light_surfaceVariant">#DEE3EB</color>
+	<color name="md_theme_light_onSurfaceVariant">#42474E</color>
+	<color name="md_theme_light_outline">#72777F</color>
+	<color name="md_theme_light_inverseOnSurface">#F1F0F4</color>
+	<color name="md_theme_light_inverseSurface">#2F3033</color>
+	<color name="md_theme_light_inversePrimary">#99CBFF</color>
+	<color name="md_theme_light_shadow">#000000</color>
+	<color name="md_theme_light_surfaceTint">#00629E</color>
+	<color name="md_theme_light_surfaceTintColor">#00629E</color>
+	<color name="md_theme_dark_primary">#99CBFF</color>
+	<color name="md_theme_dark_onPrimary">#003355</color>
+	<color name="md_theme_dark_primaryContainer">#004A78</color>
+	<color name="md_theme_dark_onPrimaryContainer">#CFE5FF</color>
+	<color name="md_theme_dark_secondary">#B9C8DA</color>
+	<color name="md_theme_dark_onSecondary">#243240</color>
+	<color name="md_theme_dark_secondaryContainer">#3A4857</color>
+	<color name="md_theme_dark_onSecondaryContainer">#D5E4F7</color>
+	<color name="md_theme_dark_tertiary">#D4BEE6</color>
+	<color name="md_theme_dark_onTertiary">#392A49</color>
+	<color name="md_theme_dark_tertiaryContainer">#504060</color>
+	<color name="md_theme_dark_onTertiaryContainer">#F0DBFF</color>
+	<color name="md_theme_dark_error">#FFB4AB</color>
+	<color name="md_theme_dark_errorContainer">#93000A</color>
+	<color name="md_theme_dark_onError">#690005</color>
+	<color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+	<color name="md_theme_dark_background">#1A1C1E</color>
+	<color name="md_theme_dark_onBackground">#E2E2E5</color>
+	<color name="md_theme_dark_surface">#1A1C1E</color>
+	<color name="md_theme_dark_onSurface">#E2E2E5</color>
+	<color name="md_theme_dark_surfaceVariant">#42474E</color>
+	<color name="md_theme_dark_onSurfaceVariant">#C2C7CF</color>
+	<color name="md_theme_dark_outline">#8C9199</color>
+	<color name="md_theme_dark_inverseOnSurface">#1A1C1E</color>
+	<color name="md_theme_dark_inverseSurface">#E2E2E5</color>
+	<color name="md_theme_dark_inversePrimary">#00629E</color>
+	<color name="md_theme_dark_shadow">#000000</color>
+	<color name="md_theme_dark_surfaceTint">#99CBFF</color>
+	<color name="md_theme_dark_surfaceTintColor">#99CBFF</color>
 </resources>
