--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -56,6 +56,11 @@
 				android:layout_weight="1" />
 	</LinearLayout>
 
+	<View
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:layout_weight="1" />
+
 	<Button
 			android:id="@+id/btnStartTicker"
 			style="@style/AppTheme.Button"
