--- a/app/src/main/res/layout/content_bookmarks.xml
+++ b/app/src/main/res/layout/content_bookmarks.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
 		android:gravity="center_vertical"
-		android:layout_height="wrap_content">
+		android:minHeight="@dimen/touchHeight">
 
 	<EditText
-			android:inputType="textCapWords"
 			android:id="@+id/etBookmarkName"
-			android:hint="@string/add_bookmark"
 			android:layout_width="0dp"
-			android:layout_weight="1"
 			android:layout_height="wrap_content"
-			android:importantForAutofill="no" />
+			android:layout_weight="1"
+			android:hint="@string/add_bookmark"
+			android:importantForAutofill="no"
+			android:inputType="textCapWords" />
 
 	<Button
 			android:id="@+id/btnSelectBookmark"
 			style="@style/Widget.Material3.Button.TextButton"
-			android:text="@string/button_select_profile"
 			android:layout_width="wrap_content"
-			android:layout_height="wrap_content" />
+			android:layout_height="wrap_content"
+			android:text="@string/button_select_profile" />
 </LinearLayout>
